Fixed horizontal scroll from 880 to 890

--- a/blocks/card/__img/card__img.css
+++ b/blocks/card/__img/card__img.css
@@ -1,7 +1,7 @@
 .card__img {
   display: block;
   height: 282px;
-  width: 282px;
+  width: 100%;
   object-fit: cover;
   object-position: center;
   transition: all .2s linear;
