--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -7,18 +7,20 @@
   .cards {
     padding-top: 50px;
     display: grid;
-    width: min-content;
     gap: 17px;
-    grid-template-columns: min-content min-content;
+    grid-template-columns:  repeat(2, 1fr);
     grid-template-rows: max-content max-content;
     margin: 0 auto;
+    width: 591px;
   }
 }
 
 @media screen and (min-width: 880px) {
   .cards {
     gap: 20px 17px;
-    grid-template-columns: min-content min-content min-content;
+    grid-template-columns:  repeat(3, 1fr);
     grid-template-rows: max-content max-content max-content;
+    margin: 0 auto;
+    width: auto;
   }
 }
