--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,7 +1,4 @@
 .page {
-  /* width: 100%;
-  max-width: 100%; */
-  /* overflow-x: hidden; */
   background: #000;
   margin: 0;
   padding: 0;
